# ore-cuda-cli

./: Cargo.toml  README.md
Equix/: Cargo.toml  README.md  readme.md
Equix/src/: collision.rs  lib.rs  solution.rs
Equix/src/bucket_array/: mem.rs
Equix/tests/: equix_hash.rs  tor_equix_vectors.rs
cuda/: drillx.cu  drillx.h
cuda/equix/include/: equix.h
cuda/equix/src/: context.h  equix.cu  solver.cu  solver.h  solver_heap.h
cuda/hashx/include/: hashx.h
cuda/hashx/src/: blake2.cu  blake2.h  compiler.h  context.cu  hashx.cu  program.cu  program.h  program_exec.cu  siphash.cu  siphash.h
drillx/: Cargo.toml
drillx/drillx/: Cargo.toml
drillx/drillx/src/: lib.rs
drillx/program/src/: lib.rs
equix/: .cargo_vcs_info  Cargo.toml  Cargo.toml.orig
equix/src/: err.rs  solver.rs
equix/src/bucket_array/: hash.rs
equix/tests/: equix_verify.rs
src/: args.rs  benchmark.rs  main.rs  mine.rs  send_and_confirm.rs  utils.rs
