[dependencies.arrayvec]
version = "0.7.4"

[dependencies.hashx]
default-features = false
version = "0.1.3"

[dependencies.num-traits]
version = "0.2.15"

[dependencies.thiserror]
version = "1.0.40"

[dependencies.visibility]
version = "0.1.0"

[dev-dependencies.permutohedron]
version = "0.2.4"

[features]
__is_experimental = []
bucket-array = ["__is_experimental"]
compiler = ["hashx/compiler"]
default = ["compiler"]
experimental = ["bucket-array"]
full = ["compiler", "hashx/full"]

[lib]
name = "equix"
path = "src/lib.rs"

[package]
authors = ["The Tor Project, Inc.", "Micah Elizabeth Scott <beth@torproject.org>"]
autobenches = false
autobins = false
autoexamples = false
autotests = false
build = false
categories = ["cryptography"]
description = "Asymmetric function for client puzzle protocols"
edition = "2021"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
keywords = ["cryptography"]
license = "LGPL-3.0-only"
name = "equix"
readme = "README.md"
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
rust-version = "1.70"
version = "0.1.6"

[[test]]
name = "equix_hash"
path = "tests/equix_hash.rs"

[[test]]
name = "equix_verify"
path = "tests/equix_verify.rs"

[[test]]
name = "tor_equix_vectors"
path = "tests/tor_equix_vectors.rs"